
Added ZRCP commands:
-save-screen: to save machine screen to file



Improved menu:
-Allow some windows to be put on the background. Also active windows are saved and restored on startup
-Pressing the menu key (F5 by default) when menu is open, it will send you back to the main menu. Also pressing over Z logo on ext desktop
-Added setting to disable showing cpu temperature, or FPS on footer
-Warn in red colour when FPS low

Improved Esxdos handler: 
-add f_mkdir function 
-add configuration setting to save local work directory

Improved ZRCP:
-Allow to write commands in "". Not all commands support this
-Added save-binary command

Improved TBBlue emulation:
-Added Layer2 modes 320x256 and 640x256
-Added 4bpp sprites
-Enable Timex video by default
-Added altrom feature: now 48k and 128k mode works again
-Legacy hi-res and border effects disabled by default. Reduces up to 13% cpu use or gain 17 FPS on my environment
-Reduced a bit cpu usage (2% cpu less on my environment) when rendering scanlines 
-Emulate register 0x8E (142) => Spectrum 128K Memory Mapping
-Allow to download a 512 MB TBBlue SD official card (allowed download sizes: 32MB, 128MB, 512MB, 2 GB)
-Allow paths with backslashes on esxdos handler

Improved debugging:
-Added breakpoint action "reset-tstatp"
-Added SEG0, SEG1, ... SEG7 variables to match TBBlue MMU pages

Improved Chloe emulation: 
-Support CPU speed setting via the ZX-Uno SCANDBLCTRL register
-Load unodos3.rom as the default divmmc firmware
-Added chloehd.mmc in the extras package

Improved emulation: use a slightly less cpu on every scanline


Fixed ZRCP bugs:
-Fix possible crash when disconnecting socket
-Using cpu-history ZRCP command no longer fires additional MRA conditions

Fixed Esxdos handler: 
-Fixed segfaults when using a file handler that was a directory

Fixed rom loading: no more cpu panic when the rom is not found